--- a/assets/airway.Rmd
+++ b/assets/airway.Rmd
@@ -9,6 +9,10 @@ output:
 The data used in this workflow comes from an RNA-seq experiment where airway smooth muscle cells were treated with dexamethasone, a synthetic glucocorticoid steroid with anti-inflammatory effects (Himes et al. 2014). Glucocorticoids are used, for example, by people with asthma to reduce inflammation of the airways. In the experiment, four human airway smooth muscle cell lines were treated with 1 micromolar dexamethasone for 18 hours. For each of the four cell lines, we have a treated and an untreated sample.
 For more description of the experiment see the article, PubMed entry 24926665, and for raw data see the GEO entry GSE52778.
 
+Many parts of this tutorial are based on parts of a published RNA-seq workflow
+available via Love et al. 2015 [F1000Research](http://f1000research.com/articles/4-1070) and as a [Bioconductor
+package](https://www.bioconductor.org/packages/release/workflows/html/rnaseqGene.html) and on Charlotte Soneson's material from the [bss2019](https://uclouvain-cbio.github.io/BSS2019/rnaseq_gene_summerschool_belgium_2019.html) workshop.
+
 # Data
 FastQ files with a small subset of the reads can be found on https://github.com/statOmics/SGA2019/tree/data-rnaseq
 Here, we will not use our count table because it is based on a small subset of the reads. 
